# DiligentWorkerTesting

./: CMakeLists.txt
src/: main.cpp
src/Headers/: Client.cpp  Client.h  Konstructor.cpp  Konstructor.h  ListResults.cpp  ListResults.h  ListTests.cpp  ListTests.h  LoginAdmin.cpp  LoginAdmin.h  LoginWorker.cpp  LoginWorker.h  Menu.cpp  Menu.h  StartScreen.cpp  StartScreen.h  Testing.cpp  Testing.h  UX_UI.cpp  UX_UI.h
src/TestWindow/: TestWindow.cpp  TestWindow.h  TestWindow2.cpp  TestWindow2.h
